--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Bubble Tea</title>
   </head>
   <body>
-    <header>Bubble Tea</header>
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
@@ -58,7 +57,16 @@
         </div>
       </div>
     </nav>
+  
+    <div
+    class="overflow-hidden rounded-lg bg-cover bg-center p-100"
+    style="background-image: url('https://assets3.thrillist.com/v1/image/2811338/1200x600/scale;;webp=auto;jpeg_quality=85.jpg');">
+     
+          <h2 class="absolute left-4 text-4xl font-semibold">Welcome to the World of Bubble Tea</h2>
+          <h4 class="absolute left-4 mt-10 text-xl font-semibold">It's lovely to have you here</h4>
+        </div>
 
-    <h1>Welcome to the world of Bubble Tea</h1>
+
+
   </body>
 </html>
