--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bubble Tea</title>
   </head>
   <body>
+    
+    <!--Navbar-->
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
@@ -57,16 +59,20 @@
         </div>
       </div>
     </nav>
-  
-    <div
-    class="overflow-hidden rounded-lg bg-cover bg-center p-100"
-    style="background-image: url('https://assets3.thrillist.com/v1/image/2811338/1200x600/scale;;webp=auto;jpeg_quality=85.jpg');">
-     
-          <h2 class="absolute left-4 text-4xl font-semibold">Welcome to the World of Bubble Tea</h2>
-          <h4 class="absolute left-4 mt-10 text-xl font-semibold">It's lovely to have you here</h4>
-        </div>
 
-
-
+    <!--Page Title-->
+    <section
+      class="overflow-hidden rounded-lg bg-cover bg-center p-100"
+      style="
+        background-image: url('https://assets3.thrillist.com/v1/image/2811338/1200x600/scale;;webp=auto;jpeg_quality=85.jpg');
+      "
+    >
+      <h2 class="absolute left-4 text-4xl font-semibold">
+        Welcome to the World of Bubble Tea
+      </h2>
+      <h4 class="absolute left-4 mt-10 text-xl font-semibold">
+        It's lovely to have you here. Please take a look around my website.
+      </h4>
+    </section>
   </body>
 </html>
