--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bubble Tea</title>
   </head>
   <body>
-    
+
     <!--Navbar-->
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
       <div
@@ -36,21 +36,21 @@
             </li>
             <li>
               <a
-                href="about.html"
+                href="About.html"
                 class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 >About</a
               >
             </li>
             <li>
               <a
-                href="types.html"
+                href="Types.html"
                 class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 >Types</a
               >
             </li>
             <li>
               <a
-                href="locations.html"
+                href="Locations.html"
                 class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent"
                 >Locations</a
               >
