Fixing broken images code

--- a/Types.html
+++ b/Types.html
@@ -51,9 +51,9 @@
       <section class="bg-white rounded-xl p-4 shadow-lg shadow-gray-500">
         <h2 class="font-semibold text-lg mb-10">1. Would you like a fruity tea or a milky tea?</h2>
         <p>Fruity bubble teas are made with fruit syrups and are typically lighter and more refreshing.</p>
-        <img src="/images/passionfruitBobatea.jpeg" alt="Fruity bubble tea" class="w-60 h-80 object-cover rounded-lg my-4 hover:scale-110 mx-auto">
+        <img src="images/passionfruitBobatea.jpeg" alt="Fruity bubble tea" class="w-60 h-80 object-cover rounded-lg my-4 hover:scale-110 mx-auto">
         <p>Milky bubble teas combine tea with milk or cream for a richer, creamier taste.</p>
-        <img src="/images/Brownsugarbubblemilktea.jpeg" alt="Milky bubble tea" class="w-60 h-80 object-cover rounded-lg mt-4 hover:scale-110 mx-auto">
+        <img src="images/Brownsugarbubblemilktea.jpeg" alt="Milky bubble tea" class="w-60 h-80 object-cover rounded-lg mt-4 hover:scale-110 mx-auto">
       </section>
 
       <!-- Step 2 -->
@@ -62,12 +62,12 @@
         <div class="space-y-6">
           <div>
             <h3 class="font-semibold text-xl text-center">Black Tea</h3>
-            <img src="/images/black tea.png" alt="Black tea" class="w-60 h-60 object-cover rounded-lg my-2 hover:scale-110 mx-auto">
+            <img src="images/blacktea.png" alt="Black tea" class="w-60 h-60 object-cover rounded-lg my-2 hover:scale-110 mx-auto">
             <p>A classic choice, known for its robust flavor and ability to stand up well to milk and sweeteners.</p>
           </div>
           <div>
             <h3 class="font-semibold text-xl text-center">Green Tea</h3>
-            <img src="/images/green tea.png" alt="Green tea" class="w-60 h-60 object-cover rounded-lg my-2 hover:scale-110 mx-auto">
+            <img src="images/greentea.png" alt="Green tea" class="w-60 h-60 object-cover rounded-lg my-2 hover:scale-110 mx-auto">
             <p>Offers a lighter, more delicate flavor profile, often used in bubble tea variations like matcha.</p>
           </div>
         </div>
@@ -80,7 +80,7 @@
           
           <!-- Topping Cards -->
           <div>
-            <img src="/images/toppingstapioca.png" alt="Tapioca pearls" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
+            <img src="images/toppingstapioca.png" alt="Tapioca pearls" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
             <p><strong>Tapioca Pearls:</strong> A subtly sweet, chewy addition made from tapioca starch.</p>
           </div>
           <div>
@@ -92,11 +92,11 @@
             <p><strong>Jelly:</strong> Coconut-based topping available in various flavours and shapes.</p>
           </div>
           <div>
-            <img src="/images/toppingspudding.png" alt="Pudding" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
+            <img src="images/toppingspudding.png" alt="Pudding" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
             <p><strong>Pudding:</strong> Made from egg yolks, cream, and sugar; great with creamy milk teas.</p>
           </div>
           <div>
-            <img src="/images/toppingsaloe.png" alt="Aloe Vera" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
+            <img src="images/toppingsaloe.png" alt="Aloe Vera" class="w-full h-40 object-cover rounded-lg mb-2 hover:scale-110">
             <p><strong>Aloe Vera:</strong> Adds a refreshing crunch and pairs beautifully with fruity teas.</p>
           </div>
         </div>
