Fixing broken images code

--- a/Locations.html
+++ b/Locations.html
@@ -52,7 +52,7 @@
       
       <!-- Cuppacha -->
       <article class="bg-white dark:bg-gray-800 shadow rounded-xl overflow-hidden" role="region" aria-labelledby="shop-cuppacha">
-        <img src="/images/cuppacha.jpeg" alt="Cuppacha bubble tea shopfront in Orchard Square, Sheffield" class="w-full h-48 object-cover" />
+        <img src="images/cuppacha.jpeg" alt="Cuppacha bubble tea shopfront in Orchard Square, Sheffield" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h2 id="shop-cuppacha" class="font-bold text-xl mb-2">Cuppacha</h2>
           <p class="mb-2">14 Orchard Square, Sheffield City Centre, Sheffield S1 2FB</p>
@@ -65,7 +65,7 @@
 
       <!-- Little Boba Cafe -->
       <article class="bg-white dark:bg-gray-800 shadow rounded-xl overflow-hidden" role="region" aria-labelledby="shop-littleboba">
-        <img src="/images/littlebobacafe.jpg" alt="Little Boba Cafe storefront on Devonshire Street in Sheffield" class="w-full h-48 object-cover" />
+        <img src="images/littlebobacafe.jpg" alt="Little Boba Cafe storefront on Devonshire Street in Sheffield" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h2 id="shop-littleboba" class="font-bold text-xl mb-2">Little Boba Cafe</h2>
           <p class="mb-2">142 Devonshire St, Sheffield City Centre, Sheffield S3 7SF</p>
@@ -78,7 +78,7 @@
 
       <!-- Yum Yum Bites -->
       <article class="bg-white dark:bg-gray-800 shadow rounded-xl overflow-hidden" role="region" aria-labelledby="shop-yumyum">
-        <img src="/images/yumyumbites.jpeg" alt="Yum Yum Bites storefront in New Era Square, Sheffield" class="w-full h-48 object-cover" />
+        <img src="images/yumyumbites.jpeg" alt="Yum Yum Bites storefront in New Era Square, Sheffield" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h2 id="shop-yumyum" class="font-bold text-xl mb-2">Yum Yum Bites</h2>
           <p class="mb-2">8 New Era Square, Highfield, Sheffield S2 4BF</p>
@@ -91,7 +91,7 @@
 
       <!-- K-Tea -->
       <article class="bg-white dark:bg-gray-800 shadow rounded-xl overflow-hidden" role="region" aria-labelledby="shop-ktea">
-        <img src="/images/ktea.jpeg" alt="K-Tea bubble tea shopfront on Ecclesall Road in Sheffield" class="w-full h-48 object-cover" />
+        <img src="images/ktea.jpeg" alt="K-Tea bubble tea shopfront on Ecclesall Road in Sheffield" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h2 id="shop-ktea" class="font-bold text-xl mb-2">K-Tea</h2>
           <p class="mb-2">653 Ecclesall Rd, Sharrow, Sheffield S11 8PT</p>
